--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,20 +1,29 @@
 {
-  "name": "contracts",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
+  "name": "hardhat-project",
+  "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "chai": "^4.3.4",
+    "ethers": "^5.5.1",
+    "hardhat": "^2.6.7"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx hardhat compile",
+    "test": "npx hardhat test",
+    "deploy": "npm run build && RELEASE_VERSION=v1 npx truffle --network goerli exec scripts/deploy.js",
+    "copy-watch": "nodemon --watch \"../../packages\" --ext \"js,ts,tsx,sol\" --exec rsync --archive --delete \"../../packages/\" \"./node_modules/@superfluid-finance/\""
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@chainlink/contracts": "^0.4.1",
-    "@openzeppelin/contracts": "^4.7.3",
-    "@superfluid-finance/ethereum-contracts": "^1.3.1",
-    "hardhat": "^2.11.0"
+    "@chainlink/contracts": "^0.4.0",
+    "@nomiclabs/hardhat-truffle5": "^2.0.2",
+    "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@openzeppelin/contracts": "^4.5.0",
+    "@superfluid-finance/ethereum-contracts": "^1.1.0",
+    "@superfluid-finance/js-sdk": "^0.5.7",
+    "dotenv": "^10.0.0",
+    "ganache-time-traveler": "^1.0.16",
+    "hardhat-deploy": "^0.9.4",
+    "mocha": "^9.1.3",
+    "web3": "^1.6.1"
   }
 }
