--- a/contracts/package.json
+++ b/contracts/package.json
@@ -18,6 +18,7 @@
     "@nomiclabs/hardhat-truffle5": "^2.0.2",
     "@nomiclabs/hardhat-web3": "^2.0.0",
     "@openzeppelin/contracts": "^4.5.0",
+    "@openzeppelin/test-helpers": "^0.5.16",
     "@superfluid-finance/ethereum-contracts": "^1.1.0",
     "@superfluid-finance/js-sdk": "^0.5.7",
     "dotenv": "^10.0.0",
