--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.3.0",
+    "@openzeppelin/contracts": "^4.7.2",
+    "@rainbow-me/rainbowkit": "^0.4.5",
+    "dotenv": "^16.0.1",
+    "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "wagmi": "^0.6.0"
   },
   "devDependencies": {
-    "eslint": "8.23.0",
-    "eslint-config-next": "12.3.0"
+    "@ethersproject/abi": "^5.4.7",
+    "@ethersproject/providers": "^5.4.7",
+    "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^1.0.1",
+    "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.2",
+    "autoprefixer": "^10.4.8",
+    "chai": "^4.2.0",
+    "eslint": "8.21.0",
+    "eslint-config-next": "12.2.3",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.10.1",
+    "hardhat-gas-reporter": "^1.0.8",
+    "postcss": "^8.4.14",
+    "solidity-coverage": "^0.7.21",
+    "tailwindcss": "^3.1.7",
+    "typechain": "^8.1.0"
   }
 }
