--- a/contracts/package.json
+++ b/contracts/package.json
@@ -8,7 +8,9 @@
     "@nomicfoundation/hardhat-toolbox": "^1.0.2",
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "chai": "^4.3.4",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.7"
   },
