--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.2",
     "@rainbow-me/rainbowkit": "^0.4.5",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@superfluid-finance/sdk-core": "^0.5.6",
+    "@superfluid-finance/sdk-redux": "^0.3.0",
     "dotenv": "^16.0.1",
     "next": "12.2.3",
     "react": "18.2.0",
@@ -19,7 +22,7 @@
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
-    "@ethersproject/providers": "^5.4.7",
+    "@ethersproject/providers": "^5.7.0",
     "@nomicfoundation/hardhat-chai-matchers": "^1.0.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^1.0.1",
