--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "wagmi": "^0.6.0"
+    "wagmi": "^0.6.0",
+    "web3": "^1.7.5"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
