--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,10 @@
     "@superfluid-finance/sdk-redux": "^0.3.0",
     "dotenv": "^16.0.1",
     "next": "12.2.3",
+    "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.3.4",
     "wagmi": "^0.6.0",
     "web3": "^1.7.5"
   },
