--- a/package.json
+++ b/package.json
@@ -22,5 +22,6 @@
     "engines": {
         "node": "14.18.0",
         "npm": "8.5.5"
-    }
+    },
+    "cacheDirectories": ["./frontend/.next/cache"]
 }
