--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/material": "^5.10.5",
+    "@nextui-org/react": "^1.0.0-beta.10",
     "@openzeppelin/contracts": "^4.7.2",
     "@rainbow-me/rainbowkit": "^0.4.5",
     "@reduxjs/toolkit": "^1.8.5",
@@ -23,9 +24,12 @@
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-loader-spinner": "^5.3.4",
+    "react-select": "^5.4.0",
     "wagmi": "^0.6.0",
-    "web3": "^1.7.5"
+    "web3": "^1.7.5",
+    "zustand": "^4.1.1"
   },
   "devDependencies": {
     "@ethersproject/abi": "^5.4.7",
@@ -37,16 +41,16 @@
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.2",
-    "autoprefixer": "^10.4.8",
+    "autoprefixer": "^10.4.11",
     "chai": "^4.2.0",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.3",
     "ethers": "^5.4.7",
     "hardhat": "^2.10.1",
     "hardhat-gas-reporter": "^1.0.8",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.16",
     "solidity-coverage": "^0.7.21",
-    "tailwindcss": "^3.1.7",
+    "tailwindcss": "^3.1.8",
     "typechain": "^8.1.0"
   }
 }
