--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@superfluid-finance/sdk-core": "^0.5.6",
     "@superfluid-finance/sdk-redux": "^0.3.0",
     "dotenv": "^16.0.1",
+    "graphql": "^16.6.0",
     "next": "12.2.3",
     "qrcode.react": "^3.1.0",
     "react": "18.2.0",
