--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@superfluid-finance/sdk-core": "^0.5.6",
     "@superfluid-finance/sdk-redux": "^0.3.0",
     "dotenv": "^16.0.1",
+    "ethereum-blockies-base64": "^1.0.2",
     "graphql": "^16.6.0",
     "next": "12.2.3",
     "qrcode.react": "^3.1.0",
