--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
     "react-loader-spinner": "^5.3.4",
+    "react-paginate": "^8.1.3",
     "react-select": "^5.4.0",
     "wagmi": "^0.6.0",
     "web3": "^1.7.5",
