--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,8 @@
     "@rainbow-me/rainbowkit": "^0.4.5",
     "@reduxjs/toolkit": "^1.8.5",
     "@superfluid-finance/sdk-core": "^0.5.6",
-    "@superfluid-finance/sdk-redux": "^0.3.0",
+    "@uauth/js": "^2.4.0",
+    "@unstoppabledomains/resolution": "^8.3.3",
     "dotenv": "^16.0.2",
     "ethereum-blockies-base64": "^1.0.2",
     "graphql": "^16.6.0",
