--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@chainlink/contracts": "^0.4.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -23,6 +24,7 @@
     "@superfluid-finance/sdk-core": "^0.5.6",
     "@uauth/js": "^2.4.0",
     "@unstoppabledomains/resolution": "^8.3.3",
+    "antd": "^4.23.5",
     "dotenv": "^16.0.2",
     "ethereum-blockies-base64": "^1.0.2",
     "graphql": "^16.6.0",
@@ -32,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.35.0",
     "react-hot-toast": "^2.4.0",
+    "react-icons": "^4.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.1.3",
     "react-select": "^5.4.0",
